--- a/app/views/steps/miam_exemptions/misc/edit.html.erb
+++ b/app/views/steps/miam_exemptions/misc/edit.html.erb
@@ -11,20 +11,28 @@
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
       <%= f.govuk_check_boxes_fieldset :misc, legend: { tag: 'span', size: 'm' } do %>
 
-        <%= f.govuk_check_box :misc, MiscExemptions::NO_RESPONDENT_ADDRESS.to_s, link_errors: true %>
         <%= f.govuk_check_box :misc, MiscExemptions::WITHOUT_NOTICE.to_s %>
-
-        <%= f.govuk_check_box :misc, MiscExemptions::GROUP_MIAM_ACCESS.to_s do %>
-          <%= f.govuk_collection_check_boxes :exemptions_collection, MiscExemptions::MIAM_ACCESS, :to_s, :to_s, legend: nil %>
+        <% unless MediationChange.changes_apply?(current_c100_application) %>
+          <%= f.govuk_check_box :misc, MiscExemptions::GROUP_MIAM_ACCESS.to_s do %>
+            <%= f.govuk_collection_check_boxes :exemptions_collection, MiscExemptions::MIAM_ACCESS, :to_s, :to_s, legend: nil %>
+          <% end %>
         <% end %>
 
-        <%= f.govuk_check_box :misc, MiscExemptions::ACCESS_PROHIBITED.to_s %>
-        <%= f.govuk_check_box :misc, MiscExemptions::NON_RESIDENT.to_s %>
         <%= f.govuk_check_box :misc, MiscExemptions::APPLICANT_UNDER_AGE.to_s %>
 
+        <% if MediationChange.changes_apply?(current_c100_application) %>
+          <%= f.govuk_check_box :misc, MiscExemptions::MISC_ACCESS.to_s %>
+          <%= f.govuk_check_box :misc, MiscExemptions::MISC_ACCESS2.to_s %>
+          <%= f.govuk_check_box :misc, MiscExemptions::MISC_ACCESS3.to_s %>
+          <%= f.govuk_check_box :misc, MiscExemptions::MISC_ACCESS4.to_s %>
+        <% end %>
         <%= f.govuk_radio_divider %>
 
         <%= f.govuk_check_box :misc, MiscExemptions::MISC_NONE.to_s %>
+      <% end %>
+
+      <% if MediationChange.changes_apply?(current_c100_application) %>
+        <p class="govuk-hint"><%=t '.hint_text' %></p>
       <% end %>
 
       <%= f.continue_button %>
