--- a/app/views/steps/miam_exemptions/domestic/edit.html.erb
+++ b/app/views/steps/miam_exemptions/domestic/edit.html.erb
@@ -9,13 +9,13 @@
     <h1 class="govuk-heading-xl"><%=t '.heading' %></h1>
 
     <p class="govuk-body-l"><%= t '.lead_text' %></p>
+    <p class="govuk-body-l"><%= t '.sub_lead_text' %></p>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
       <%= f.govuk_check_boxes_fieldset :domestic, legend: { tag: 'span', size: 'm' } do %>
-
-        <%= f.govuk_check_box :domestic, DomesticExemptions::GROUP_POLICE.to_s, link_errors: true do %>
-          <%= f.govuk_collection_check_boxes :exemptions_collection, DomesticExemptions::POLICE, :to_s, :to_s, legend: nil %>
-        <% end %>
+          <%= f.govuk_check_box :domestic, DomesticExemptions::GROUP_POLICE.to_s, link_errors: true do %>
+            <%= f.govuk_collection_check_boxes :exemptions_collection, MediationChange.changes_apply?(current_c100_application) ? DomesticExemptions::POLICE_MU : DomesticExemptions::POLICE, :to_s, :to_s, legend: nil %>
+          <% end %>
 
         <%= f.govuk_check_box :domestic, DomesticExemptions::GROUP_COURT.to_s do %>
           <%= f.govuk_collection_check_boxes :exemptions_collection, DomesticExemptions::COURT, :to_s, :to_s, legend: nil %>
