--- a/app/views/errors/shared/_continue_button.html.erb
+++ b/app/views/errors/shared/_continue_button.html.erb
@@ -1,1 +1,1 @@
-<%= link_button t('shared.start_again'), root_path, class: 'govuk-!-margin-top-2' %>
+<%= link_button t('shared.start_again'), root_path(new: 'y'), class: 'govuk-!-margin-top-2' %>
