allow file to be shown when no exemptions and hide exemption reasons when nil

--- a/app/views/steps/completion/shared/_exemption_reasons.pdf.erb
+++ b/app/views/steps/completion/shared/_exemption_reasons.pdf.erb
@@ -1,4 +1,4 @@
-<% if exemption_details.ivar.present? %>
+<% if exemption_reasons.ivar.present? %>
   <p>
     <strong><%=t "check_answers.exemption_reasons.question" %></strong>
   </p>
