--- a/app/views/steps/miam_exemptions/exemption_reasons/edit.html.erb
+++ b/app/views/steps/miam_exemptions/exemption_reasons/edit.html.erb
@@ -7,14 +7,14 @@
 
     <h1 class="govuk-heading-xl"><%=t '.heading' %></h1>
 
-    <%=t '.info_html' %>
-
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
-      <%= f.govuk_text_area :exemption_reasons, rows: 8, label: { hidden: true } %>
 
       <%= f.govuk_radio_buttons_fieldset :attach_evidence, legend: { text: "#{t '.attach_evidence' }", size: 'm' } do %>
         <%= f.govuk_radio_button :attach_evidence, GenericYesNo::YES %>
-        <%= f.govuk_radio_button :attach_evidence, GenericYesNo::NO %>
+        <%= f.govuk_radio_button :attach_evidence, GenericYesNo::NO do %>
+          <%=t '.info_html' %>
+          <%= f.govuk_text_area :exemption_reasons, rows: 8, label: { hidden: true } %>
+        <% end %>
       <% end %>
       <%= f.continue_button %>
     <% end %>
