Miam exemption details to be optional

--- a/app/views/steps/completion/shared/_exemption_details.pdf.erb
+++ b/app/views/steps/completion/shared/_exemption_details.pdf.erb
@@ -2,8 +2,14 @@
   <p>
     <strong><%=t "check_answers.exemption_details.question" %></strong>
   </p>
-
   <ul>
       <li><%= exemption_details.ivar %></li>
+  </ul>
+<% else %>
+  <p>
+    <strong><%=t "check_answers.exemption_details.question" %></strong>
+  </p>
+  <ul>
+    <li><%= t "check_answers.exemption_details.absence_answer" %></li>
   </ul>
 <% end %>
