RST-8609 miam_exemptions about content

--- a/app/views/about/miam_exemptions.en.html.erb
+++ b/app/views/about/miam_exemptions.en.html.erb
@@ -11,7 +11,7 @@
     </p>
 
     <p class="govuk-body">If you think you’re exempt from attending a MIAM, you must be prepared to explain your reasons to the court.
-      Where evidence is required, you need to submit a copy of this document with this application to court.
+      Where evidence is required, this must be submitted alongside this application to court.
     </p>
 
     <p class="govuk-body">You do not have to attend a MIAM if:</p>
@@ -47,13 +47,13 @@
           <li>Evidence of a relevant police caution for a domestic abuse offence</li>
           <li>Evidence of relevant criminal proceedings for a domestic abuse offence which have not concluded</li>
           <li>Evidence of a relevant conviction for a domestic abuse offence</li>
-          <li>a domestic violence protection notice issued under section 24 of the Crime and Security Act 2010 against a prospective party</li>
+          <li>a domestic abuse protection notice given under section 22 of the Domestic Abuse Act 2021 against a prospective party</li>
         </ul>
       </div>
     </details>
 
     <h3 class="govuk-heading-m">A court has already been involved</h3>
-    <p class="govuk-body">For example, a court has made an order relating to the prospective applicant, the other people in this application (the respondents) or somebody close to you or them in connection with domestic abuse.</p>
+    <p class="govuk-body">For example, a court has made an order relating to you, the other people in this application (the respondents) or somebody close to you or them in connection with domestic abuse.</p>
 
     <details class="govuk-details" data-module="govuk-details">
       <summary class="govuk-details__summary">
@@ -73,7 +73,7 @@
     </details>
 
     <h3 class="govuk-heading-m">
-     A letter confirms the prospective applicant or the other people in this application (the respondents) are or have been a victim of domestic abuse
+     A letter confirms you or the other people in this application (the respondents) are or have been a victim of domestic abuse
     </h3>
     <p class="govuk-body">
       For example, a health professional or specialist has confirmed injuries that are or were a result of domestic abuse.
@@ -97,7 +97,7 @@
               <li>an appropriate health professional who has access to the medical records of the prospective party referred to below; or</li>
               <li>the person to whom the referral described below was made</li>
             </ol>
-            <p class="govuk-body">confirming that there was a referral by an appropriate health professional of a prospective party to a person who provides specialist support or assistance for victims of, or those at risk of, domestic violence</p>
+            <p class="govuk-body">confirming that there was a referral by an appropriate health professional of a prospective party to a person who provides specialist support or assistance for victims of, or those at risk of, domestic abuse</p>
           </li>
         </ul>
       </div>
@@ -107,7 +107,7 @@
       A letter from a local authority or other agency confirms a risk of harm
     </h3>
     <p class="govuk-body">
-      For example, a local authority or housing association has confirmed there is a risk of domestic violence or abuse.
+      For example, a local authority or housing association has confirmed there is a risk of domestic abuse.
     </p>
 
     <details class="govuk-details" data-module="govuk-details">
@@ -116,7 +116,7 @@
       </summary>
       <div class="govuk-details__text">
         <ul class="govuk-list govuk-list--bullet">
-          <li>A letter from any person who is a member of a multi-agency risk assessment conference (or other suitable local safeguarding forum) confirming that a prospective party, or a person with whom that prospective party is personally connected, is or has been at risk of harm from domestic abuse by another prospective party</li>
+          <li>a letter from any person who is a member of a multi-agency risk assessment conference (or other suitable local safeguarding forum) confirming that a prospective party, or a person with whom that prospective party is personally connected, is or has been at risk of harm from domestic abuse by another prospective party</li>
           <li>a letter from an officer employed by a local authority or housing association (or their equivalent in Scotland or Northern Ireland) for the purpose of supporting tenants containing:
             <ol class="govuk-list app-list--lower-roman">
               <li>a statement to the effect that, in their reasonable professional judgment, a person with whom a prospective party is or has been personally connected is, or is at risk of being, a victim of domestic abuse by that prospective party</li>
@@ -124,13 +124,13 @@
               <li>a description of the support they provided to the victim of domestic abuse or the person at risk of domestic abuse by that prospective party</li>
             </ol>
           </li>
-          <li>A letter from a public authority confirming that a person with whom a prospective party is or was personally connected, was assessed as being, or at risk of being, a victim of domestic abuse by that prospective party (or a copy of that assessment)</li>
+          <li>a letter from a public authority confirming that a person with whom a prospective party is or was personally connected, was assessed as being, or at risk of being, a victim of domestic abuse by that prospective party (or a copy of that assessment)</li>
         </ul>
       </div>
     </details>
 
     <h3 class="govuk-heading-m">
-      The prospective applicant has a letter from a domestic abuse support service, specialist or organisation
+      You have a letter from a domestic abuse support service, specialist or organisation
     </h3>
     <p class="govuk-body">
       For example, an independent domestic violence or abuse adviser has confirmed they are providing support to you or the other people in this application (the respondents)
@@ -147,7 +147,7 @@
           <li>
             a letter which:
             <p class="govuk-body govuk-!-margin-top-3">
-              (i) is from an organisation providing domestic violence support services, or a registered charity, which letter confirms that it:
+              (i) is from an organisation providing domestic abuse support services which letter confirms that it:
             </p>
             <ol class="govuk-list app-list--lower-alpha">
               <li>is situated in the United Kingdom</li>
@@ -165,7 +165,7 @@
             </ol>
           </li>
           <li>
-            a letter or report from an organisation providing domestic violence support services in the UK confirming:
+            a letter or report from an organisation providing domestic abuse support services in the UK confirming:
             <ol class="govuk-list app-list--lower-roman">
               <li>that a person with whom a prospective party is or was personally connected was refused admission to a refuge</li>
               <li>the date on which they were refused admission to the refuge; and</li>
@@ -177,11 +177,8 @@
     </details>
 
     <h3 class="govuk-heading-m">
-      You or any of the people in this application (the respondents) have been granted indefinite leave to remain in the UK as a victim of domestic abuse
+      You or any of the people in this application (the respondents) have been granted leave to remain in the UK as a victim of domestic abuse
     </h3>
-    <p class="govuk-body">
-      A letter from the Home Office will have confirmed that your leave was granted under paragraph 289B of the Immigration Rules.
-    </p>
 
     <details class="govuk-details" data-module="govuk-details">
       <summary class="govuk-details__summary">
@@ -189,13 +186,13 @@
       </summary>
       <div class="govuk-details__text">
         <ul class="govuk-list govuk-list--bullet">
-          <li>a letter from the Secretary of State for the Home Department confirming that a prospective party has been granted leave to remain in the UK under <a href="https://www.gov.uk/guidance/immigration-rules/immigration-rules-part-8-family-members#pt8violence" class="govuk-link" rel="external" target="_blank">paragraph 289B of the Rules made by the Home Secretary under section 3(2) of the Immigration Act 1971</a></li>
+          <li>a letter from the Secretary of State for the Home Department confirming that a prospective party has been granted leave to remain in the UK as a victim of domestic abuse</li>
         </ul>
       </div>
     </details>
 
     <h3 class="govuk-heading-m">
-      You have evidence that the prospective applicant or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
+      You have evidence that you or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
     </h3>
     <p class="govuk-body">
       Financial abuse is a way of controlling someone being able to earn, spend or keep their own money. For example, preventing someone from going to work, withholding money, or putting debts in someone else’s name.
@@ -216,7 +213,7 @@
     </p>
 
     <p class="govuk-body">
-      A local authority is carrying out enquiries or an assessment about any of the children in this application, or other child in the household
+      A local authority is carrying out enquiries under section 47 of the Children Act 1989 about any of the children in this application, or other child in the household
     </p>
     <p class="govuk-body">
       Any of the children in this application, or other child in the household, is the subject of a child protection plan
@@ -228,7 +225,7 @@
 
     <details class="govuk-details" data-module="govuk-details">
       <summary class="govuk-details__summary">
-        <span class="govuk-details__summary-text" data-ga-category="miam exemptions" data-ga-label="urgency examples">Examples of when an application may be urgent</span>
+        <span class="govuk-details__summary-text" data-ga-category="miam exemptions" data-ga-label="urgency examples">When an application may be urgent</span>
       </summary>
       <div class="govuk-details__text">
         <p class="govuk-body">There is:</p>
@@ -238,7 +235,7 @@
         </ul>
         <p class="govuk-body">Any delay caused by attending a MIAM would cause:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>significant financial hardship to the prospective applicant</li>
+          <li>significant financial hardship for you</li>
           <li>a risk of harm to the children</li>
           <li>a risk of unlawful removal of a child from the UK, or a risk of unlawful retention of a child who is currently outside England and Wales</li>
           <li>a significant risk of a miscarriage of justice</li>
@@ -247,26 +244,16 @@
       </div>
     </details>
 
-    <h2 class="govuk-heading-l">You’ve previously been to a MIAM or had a valid reason for not attending one</h2>
+    <h2 class="govuk-heading-l">You’ve previously been to a MIAM or non-court dispute resolution process</h2>
 
     <h3 class="govuk-heading-m">
-      You’ve already been to a MIAM or are taking part in another form of non-court resolution
+      You’ve already been to a MIAM or are taking part in another form of non-court dispute resolution
     </h3>
     <p class="govuk-body">
-      The MIAM must have taken place within the past 4 months (or your attendance at another type of non-court resolution must be ongoing) and have been about the same or a very similar dispute.
+      The MIAM or non-court dispute resolution process must have taken place within the past 4 months and have been about the same or a very similar dispute. If you attended a non-court dispute resolution process, you must provide with this application written confirmation from the non-court dispute resolution provider that you attended.
     </p>
     <p class="govuk-body">
       You’re involved in other ongoing family court proceedings and you attended a MIAM before starting those proceedings.
-    </p>
-
-    <h3 class="govuk-heading-m">
-      You had a valid reason for not attending a MIAM previously
-    </h3>
-    <p class="govuk-body">
-      You have made another court application within the last 4 months about the same or a very similar dispute and you had a confirmed valid reason for not attending a MIAM before making that application.
-    </p>
-    <p class="govuk-body">
-      You're involved in other ongoing family court proceedings where the applicant in those proceedings had a confirmed valid reason for not attending a MIAM.
     </p>
 
     <h2 class="govuk-heading-l">Any other exemptions</h2>
@@ -279,34 +266,27 @@
     </p>
 
     <h3 class="govuk-heading-m">
-      You can’t access a mediator
+      You can’t attend a MIAM online or by video link, and can’t access a mediator
     </h3>
 
     <p class="govuk-body">
-      Examples of not being able to access a mediator include:
+      Not being able to access a mediator means:
     </p>
 
     <ul class="govuk-list govuk-list--bullet">
       <li>you live further than 15 miles from a mediator</li>
-      <li>you’ve contacted all the mediators with an office within 15 miles of where you live (or at least 3, if there are more) and can’t get an appointment for a MIAM within 15 working days</li>
-      <li>you or any of the other people in this application (the respondents) have a disability and there are no mediators within 15 miles who can offer disabled facilities</li>
+      <li>you’ve contacted all the mediators with an office within 15 miles of where you live (or at least 5, if there are 5 or more) and can’t get an appointment for a MIAM within 15 working days</li>
+      <li>you or any of the other people in this application (the respondents) have a disability and there are no mediators (or 5, if there are 5 or more) within 15 miles of where you live who can offer the appropriate facilities</li>
       <li>
         you or any of the other people in this application (the respondents) are:
         <ul class="govuk-list govuk-list--bullet">
-          <li>in prison or any other institution</li>
+          <li>in prison or any other institution and there are no facilities for them to attend a MIAM online or by video link</li>
           <li>subject to bail conditions that prevent contact with each other</li>
           <li>subject to a licence that prohibits contact with each other</li>
         </ul>
       </li>
     </ul>
-    <p class="govuk-body">The court may ask you for the contact details of the mediators and the dates you contacted them.</p>
-
-    <h3 class="govuk-heading-m">
-      You or the other people in this application (the respondents) don’t live in England or Wales
-    </h3>
-    <p class="govuk-body">
-      You don’t need to attend a MIAM if the lives of you or the other people involved are mainly based outside England or Wales. This may include working, owning property, having children in school or if family life mainly takes place outside England or Wales.
-    </p>
+    <p class="govuk-body">You must provide the contact details of the mediators and the dates you contacted them with this application to court.</p>
 
     <h3 class="govuk-heading-m">
       The applicant or any of the other people in this application (the respondents) are under 18 years old
