--- a/app/views/about/miam_exemptions.en.html.erb
+++ b/app/views/about/miam_exemptions.en.html.erb
@@ -244,7 +244,7 @@
       </div>
     </details>
 
-    <h2 class="govuk-heading-l">You’ve previously been to a MIAM or non-court dispute resolution process</h2>
+    <h2 class="govuk-heading-l">You’ve previously been to a MIAM or a non-court dispute resolution process</h2>
 
     <h3 class="govuk-heading-m">
       You’ve already been to a MIAM or are taking part in another form of non-court dispute resolution
