--- a/app/views/about/miam_exemptions.en.html.erb
+++ b/app/views/about/miam_exemptions.en.html.erb
@@ -250,7 +250,7 @@
       You’ve already been to a MIAM or are taking part in another form of non-court dispute resolution
     </h3>
     <p class="govuk-body">
-      The MIAM or non-court dispute resolution process must have taken place within the past 4 months and have been about the same or a very similar dispute. If you attended a non-court dispute resolution process, you must provide with this application written confirmation from the non-court dispute resolution provider that you attended.
+      The MIAM or non-court dispute resolution process must have taken place within the past 4 months, and have been about the same or a very similar dispute. If you attended a non-court dispute resolution process, you must provide with this application written confirmation from the non-court dispute resolution provider that you attended.
     </p>
     <p class="govuk-body">
       You’re involved in other ongoing family court proceedings and you attended a MIAM before starting those proceedings.
