--- a/app/views/about/miam_exemptions.en.html.erb
+++ b/app/views/about/miam_exemptions.en.html.erb
@@ -280,7 +280,7 @@
       <li>
         you or any of the other people in this application (the respondents) are:
         <ul class="govuk-list govuk-list--bullet">
-          <li>in prison or any other institution and there are no facilities for them to attend a MIAM online or by video link</li>
+          <li>in prison or any other institution, and there are no facilities for them to attend a MIAM online or by video link</li>
           <li>subject to bail conditions that prevent contact with each other</li>
           <li>subject to a licence that prohibits contact with each other</li>
         </ul>
