Rst 6809 miam exemptions content (#1652)
* RST-6809a missing a

* missing comma

* missing comma

--- a/app/views/about/miam_exemptions.en.html.erb
+++ b/app/views/about/miam_exemptions.en.html.erb
@@ -244,13 +244,13 @@
       </div>
     </details>
 
-    <h2 class="govuk-heading-l">You’ve previously been to a MIAM or non-court dispute resolution process</h2>
+    <h2 class="govuk-heading-l">You’ve previously been to a MIAM or a non-court dispute resolution process</h2>
 
     <h3 class="govuk-heading-m">
       You’ve already been to a MIAM or are taking part in another form of non-court dispute resolution
     </h3>
     <p class="govuk-body">
-      The MIAM or non-court dispute resolution process must have taken place within the past 4 months and have been about the same or a very similar dispute. If you attended a non-court dispute resolution process, you must provide with this application written confirmation from the non-court dispute resolution provider that you attended.
+      The MIAM or non-court dispute resolution process must have taken place within the past 4 months, and have been about the same or a very similar dispute. If you attended a non-court dispute resolution process, you must provide with this application written confirmation from the non-court dispute resolution provider that you attended.
     </p>
     <p class="govuk-body">
       You’re involved in other ongoing family court proceedings and you attended a MIAM before starting those proceedings.
@@ -280,7 +280,7 @@
       <li>
         you or any of the other people in this application (the respondents) are:
         <ul class="govuk-list govuk-list--bullet">
-          <li>in prison or any other institution and there are no facilities for them to attend a MIAM online or by video link</li>
+          <li>in prison or any other institution, and there are no facilities for them to attend a MIAM online or by video link</li>
           <li>subject to bail conditions that prevent contact with each other</li>
           <li>subject to a licence that prohibits contact with each other</li>
         </ul>
