--- a/app/views/steps/miam_exemptions/domestic/edit.html.erb
+++ b/app/views/steps/miam_exemptions/domestic/edit.html.erb
@@ -14,7 +14,7 @@
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
       <%= f.govuk_check_boxes_fieldset :domestic, legend: { tag: 'span', size: 'm' } do %>
           <%= f.govuk_check_box :domestic, DomesticExemptions::GROUP_POLICE.to_s, link_errors: true do %>
-            <%= f.govuk_collection_check_boxes :exemptions_collection, MediationChange.changes_apply?(current_c100_application) ? DomesticExemptions::POLICE_MU : DomesticExemptions::POLICE, :to_s, :to_s, legend: nil %>
+            <%= f.govuk_collection_check_boxes :exemptions_collection, DomesticExemptions::POLICE_MU, :to_s, :to_s, legend: nil %>
           <% end %>
 
         <%= f.govuk_check_box :domestic, DomesticExemptions::GROUP_COURT.to_s do %>
