--- a/app/views/steps/completion/shared/_section_header.pdf.erb
+++ b/app/views/steps/completion/shared/_section_header.pdf.erb
@@ -1,3 +1,3 @@
 <h2 class="main-section-header">
-  <%= t "check_answers.section_headers_mediation_change.#{section_header.name}" %>
+  <%= t "check_answers.section_headers.#{section_header.name}" %>
 </h2>
