Styling changes to suit changes from New WCAG 2.2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 <% end %>
 <% content_for(:service_name) do %>
   <%= link_to service_name, '/',
-              class: 'govuk-header__link govuk-header__link--service-name ga-pageLink',
+              class: 'govuk-header__link govuk-header__service-name',
               data: { ga_category: 'header', ga_label: 'service name' } %>
 <% end %>
 
