--- a/app/views/layouts/_phase_banner.html.erb
+++ b/app/views/layouts/_phase_banner.html.erb
@@ -1,6 +1,6 @@
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
-    <strong class="govuk-tag govuk-phase-banner__content__tag ">beta</strong>
+    <strong class="govuk-tag govuk-phase-banner__content__tag ">Beta</strong>
     <span class="govuk-phase-banner__text">
       <%= phase_banner_copy %>
     </span>
