--- a/app/assets/stylesheets/local/misc.scss
+++ b/app/assets/stylesheets/local/misc.scss
@@ -85,6 +85,12 @@ ol.app-list--icon-steps {
 ul.app-list--pros-cons {
   @extend .govuk-\!-font-size-16;
 
+  & > li {
+    padding-left: 1.4em;
+    padding-bottom: 0.3em;
+    background-repeat: no-repeat;
+  }
+
   & > li.app-list--item--pros {
     background-image: image-url('icon-tick.svg');
     background-position: 0 0.22em;
