--- a/app/views/steps/other_party/refuge/edit.html.erb
+++ b/app/views/steps/other_party/refuge/edit.html.erb
@@ -1,11 +1,11 @@
-<% title t('.page_title') %>
+<% title t('.page_title', name: @form_object.record.full_name ) %>
 <% step_header %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= govuk_error_summary %>
 
-    <h1 class="govuk-heading-xl"><%=t '.heading', name: @form_object.record.person.full_name %></h1>
+    <h1 class="govuk-heading-xl"><%=t '.heading', name: @form_object.record.full_name %></h1>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
       <%= f.govuk_collection_radio_buttons :refuge, GenericYesNo.values, :value, nil, legend: nil %>
