Update brakeman ignore file and resolve breaking errors

--- a/app/views/steps/shared/_kickout_survey.html.erb
+++ b/app/views/steps/shared/_kickout_survey.html.erb
@@ -2,6 +2,6 @@
 
 <p class="govuk-body">
   Would you like
-  to <%= link_to 'complete a 5-minute survey', Rails.configuration.surveys[:kickout], rel: 'external', target: '_blank', class: 'govuk-link' %>
+  to <%= link_to 'complete a 5-minute survey', Rails.configuration.gov_surveys[:kickout], rel: 'external', target: '_blank', class: 'govuk-link' %>
   to give us your feedback about the online service you have just used? This will help us to improve it.
 </p>
