RST-7064 file upload hint styling

--- a/app/views/steps/shared/document_upload/_file_upload_requirements.html.erb
+++ b/app/views/steps/shared/document_upload/_file_upload_requirements.html.erb
@@ -1,5 +1,5 @@
 <details class="govuk-details">
-  <summary class="details__summary" aria-controls="details-content" aria-expanded="false">
+  <summary class="govuk-details__summary" aria-controls="details-content" aria-expanded="false">
       <span class="govuk-details__summary-text">
           <%= t 'shared.file_upload.header' %>
       </span>
