--- a/app/views/steps/miam/certification_upload/edit.html.erb
+++ b/app/views/steps/miam/certification_upload/edit.html.erb
@@ -5,7 +5,7 @@
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl"><%= t('.page_title') %></h1>
 
-    <p class="govuk-body"> <%= t('.help_text') %> </p>
+    <p class="govuk-body-l"> <%= t('.help_text') %> </p>
     <%= t('.lead_text_html') %>
 
     <details class="govuk-details" data-module="govuk-details">
