RST-7077 - Merged home_phone and mobile_phone into 1 phone_number value

--- a/app/views/steps/applicant/privacy_preferences/edit.html.erb
+++ b/app/views/steps/applicant/privacy_preferences/edit.html.erb
@@ -17,8 +17,7 @@
           } do %>
             <%= f.govuk_check_box :contact_details_private, ContactDetails::ADDRESS.to_s %>
             <%= f.govuk_check_box :contact_details_private, ContactDetails::EMAIL.to_s %>
-            <%= f.govuk_check_box :contact_details_private, ContactDetails::MOBILE.to_s %>
-            <%= f.govuk_check_box :contact_details_private, ContactDetails::HOME_PHONE.to_s %>
+            <%= f.govuk_check_box :contact_details_private, ContactDetails::PHONE_NUMBER.to_s %>
           <% end %>
         <% end %>
         <%= f.govuk_radio_button :are_contact_details_private, GenericYesNo::NO %>
