--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,11 +4,12 @@
 // Style paragraphs (`<p>`) and links (`<a>`) without explicitly having to apply `govuk-body` and `govuk-link` classes
 $govuk-global-styles: true;
 $govuk-new-typography-scale: true;
+$govuk-new-organisation-colours: true;
 
 $govuk-fonts-path: 'govuk-frontend/dist/govuk/assets/fonts/';
 $govuk-images-path: 'govuk-frontend/dist/govuk/assets/images/';
 
-@import "govuk-frontend/dist/govuk/all";
+@import "govuk-frontend/dist/govuk/index";
 
 // App-specific custom styles and overrides
 @import 'local/all';
