--- a/app/assets/stylesheets/local/intro_card.scss
+++ b/app/assets/stylesheets/local/intro_card.scss
@@ -46,7 +46,7 @@ $app-button-inverted-hover-background-colour: govuk-tint($app-button-inverted-fo
 .app-button--l {
   // Below styles from govuk-button--start
   @include govuk-typography-weight-bold;
-  @include govuk-typography-responsive($size: 24, $override-line-height: 1);
+  @include govuk-font-size($size: 24, $line-height: 1, $important: false);
 
   min-height: auto;
   justify-content: center;
