RST-7198 - Fixed typo

--- a/app/views/steps/shared/document_upload/_document_upload_field.html.erb
+++ b/app/views/steps/shared/document_upload/_document_upload_field.html.erb
@@ -13,7 +13,8 @@
     <div class="govuk-drop-zone" data-module="govuk-file-upload">
       <%= form.govuk_file_field(field_name, label: { text: t('shared.file_upload.select_file') }, class: 'govuk-file-upload single-file-upload', accept: DocumentUpload::ALLOWED_CONTENT_TYPES.join(','), src: 'camera',
         onchange: "validateFiles(this);",
-        data: { max_file_size: 20.megabytes }) %
+        data: { max_file_size: 20.megabytes }) %>
+    </div>
   </div>
 </div>
 
