--- a/app/views/steps/shared/document_upload/_document_upload_field.html.erb
+++ b/app/views/steps/shared/document_upload/_document_upload_field.html.erb
@@ -10,10 +10,17 @@
 
 <div class="govuk-grid-row uploader-row">
   <div class="govuk-grid-column-two-thirds">
-    <div class="govuk-drop-zone" data-module="govuk-file-upload">
-      <%= form.govuk_file_field(field_name, label: { text: t('shared.file_upload.select_file') }, class: 'govuk-file-upload single-file-upload', accept: DocumentUpload::ALLOWED_CONTENT_TYPES.join(','), src: 'camera',
-        onchange: "validateFiles(this);",
-        data: { max_file_size: 20.megabytes }) %>
+    <div class="govuk-form-group">
+      <%= form.label field_name, t('shared.file_upload.select_file'), class: 'govuk-label', for: "#{field_name}_input" %>
+      <div class="govuk-drop-zone" data-module="govuk-file-upload">
+        <%= form.govuk_file_field(field_name, label: nil, class: 'govuk-file-upload single-file-upload',
+                                  accept: DocumentUpload::ALLOWED_CONTENT_TYPES.join(','),
+                                  src: 'camera',
+                                  onchange: "validateFiles(this);",
+                                  id: "#{field_name}_input",
+                                  'aria-labelledby': "#{field_name}_input",
+                                  data: { max_file_size: 20.megabytes }) %>
+      </div>
     </div>
   </div>
 </div>
